--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
+    "iconv-lite": "^0.6.3",
     "next": "16.1.1",
     "papaparse": "^5.5.3",
     "pdfkit": "^0.13.0",
